c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/null_ptr_array_initializer.c
int main(void)
{
    // You can't initialize an array with a scalar, not even a null pointer constant
    int arr[1] = 0;
    return arr[0];
}